--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ Fabric3 = "^1.14.post1"
 python-dotenv = "^0.17.1"
 
 [tool.poetry.dev-dependencies]
+pylint = "^2.8.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
